--- a/settings/project.json
+++ b/settings/project.json
@@ -1,23 +1,59 @@
 {
   "collision-matrix": [
     [
+      false,
+      false,
+      false,
+      false,
+      false
+    ],
+    [
+      false,
+      false,
+      true,
+      false,
+      false
+    ],
+    [
+      false,
+      true,
+      false,
+      true,
+      false
+    ],
+    [
+      false,
+      false,
+      true,
+      false,
       true
+    ],
+    [
+      false,
+      false,
+      false,
+      true,
+      false
     ]
   ],
-  "excluded-modules": [],
-  "group-list": [
-    "default"
-  ],
-  "start-scene": "current",
-  "design-resolution-width": 960,
   "design-resolution-height": 640,
-  "fit-width": false,
+  "design-resolution-width": 960,
+  "excluded-modules": [],
   "fit-height": true,
-  "use-project-simulator-setting": false,
+  "fit-width": false,
+  "group-list": [
+    "default",
+    "bullet",
+    "enemy",
+    "hero",
+    "ufo"
+  ],
   "simulator-orientation": false,
-  "use-customize-simulator": false,
   "simulator-resolution": {
-    "width": 960,
-    "height": 640
-  }
+    "height": 640,
+    "width": 960
+  },
+  "start-scene": "current",
+  "use-customize-simulator": false,
+  "use-project-simulator-setting": false
 }
